# DataAssistant

./: .gitignore  CMakeLists.txt  CalendarDelegate.cpp  CalendarDelegate.h  DatabaseManager.cpp  DatabaseManager.h  LICENSE.md  LunarCalendar.cpp  LunarCalendar.h  README.md  ReminderManager.cpp  ReminderManager.h  START_PACKAGING.bat  ScheduleDetailDialog.cpp  ScheduleDetailDialog.h  ScheduleDialog.cpp  ScheduleDialog.h  ScheduleDialog.ui  ScheduleListDialog.cpp  ScheduleListDialog.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  SystemTrayNotification.h  WeatherManager.cpp  WeatherManager.h  Widget.cpp  Widget.h  Widget.ui  debug_delete_issue.md  diagnose_imap.bat  诊断和修复指南.md
.trae/: Builder Prompt.md  Chat Prompt.md
PythonEmail/: PythonEmailClient.cpp  PythonEmailClient.h  PythonEmbedder.cpp  PythonEmbedder.h  __init__.py  imap_handler.py  smtp_handler.py
ResourceCode/: 模块划分说明.md
ResourceCode/Calendar/: CalendarDelegate.cpp
ResourceCode/Core/: Widget.cpp  Widget.h  Widget.ui
ResourceCode/Database/: DatabaseManager.cpp  DatabaseManager.h  DatabaseManagerExtra.cpp
ResourceCode/Notification/: SystemTrayNotification.cpp
ResourceCode/Schedule/: ScheduleDetailDialog.cpp  ScheduleDetailDialog.h  ScheduleDialog.cpp  ScheduleDialog.h  ScheduleDialog.ui  ScheduleListDialog.cpp  ScheduleListDialog.h
ResourceCode/Settings/: SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui
ResourceCode/Weather/: WeatherManager.cpp
ResourceCode/email/: AddAccountDialog.cpp  AddAccountDialog.h  EmailBoxWindow.cpp  EmailBoxWindow.h  EmailCountWindow.cpp  EmailCountWindow.h  EmailDataManager.cpp  EmailDataManager.h  EmailListItemNew.cpp  EmailListItemNew.h  EmailModels.h  EmailProtocolTest.cpp  EmailProtocolTest.h  EmailSendWindow.cpp  EmailSendWindow.h  NetworkDiagnostic.cpp  SimpleTest.cpp
TraeGitUploadWords/: 4.5.21.40.md  packageForWindows.md  uploadQtAwesome.md  扁平结构转换为模块化架构.md  批量添加、智能删除和UI优化.md  系统重构，新增系统通知.md  邮件实现.md
doc/: CALENDAR_GRAY_IMPLEMENTATION_SUMMARY.md  CALENDAR_THREE_STATE_DESIGN.md  DELIVERY_SUMMARY.md  EmailProtocolAPI文档.md  GRAY_CALENDAR_DESIGN.md  IMAP_DIAGNOSTIC_REPORT.md  IMAP_SMTP集成开发指导文档.md  INDEX.md  PACKAGING_CHECKLIST.md  PACKAGING_GUIDE.md  QQHelp.md  QUICKSTART.md  TODAY_MARKER_FEATURE.md  issue.md  solveMethod.md  产品需求文档.md  优先级Bug完整修复说明.md  优先级存储Bug修复报告.md  修复今天和背景染色冲突.md  修改日程默认时间.md  农历日期计算修复报告.md  批量删除功能Bug修复测试报告.md  批量删除功能修复完成报告.md  批量删除日程功能说明.md  批量删除核心问题修复说明.md  批量日程专用删除功能优化说明.md  批量日程合并显示功能说明.md  批量添加日程功能实现文档.md  日历样式修改规范.md  日历点击问题深度分析.md  日历点击问题解决方案.md  日程删除功能优化说明.md  日程格子染色功能.md  移除删除成功提示框.md  邮件刷新功能重构指导书.md  高德API调用须知.md
lib/QtAwesome/: CMakeLists.txt  Makefile  QtAwesomeConfig.cmake  cmake_install.cmake
lib/QtAwesome/QtAwesome_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
lib/QtAwesome/QtAwesome_autogen/3QVQ3WXC3W/: moc_QtAwesome.cpp  moc_QtAwesome.cpp.d  moc_QtAwesomeAnim.cpp  moc_QtAwesomeAnim.cpp.d  qrc_QtAwesomeFree.cpp
logic/: PROJECT_LOGIC_DOCUMENTATION.md  Requset.md
scripts/: README.md  build.bat  build_msys2.bat  check_env.bat  deploy.bat  installer.iss  package.bat  portable.bat  run_tests.bat  verify_defender.ps1
